Добавляет папки и картинки

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
            <!--Основная надпись с кнопкой-->
       <section>
          <h1>ЭФФЕКТИВНЫЕ РЕШЕНИЯ <br> ДЛЯ ВАШЕГО БИЗНЕСА</h1>
-          <button>Заказать услугу</button>
+          <button type="button" >Заказать услугу</button>
       </section>
 
       <!--Скилы и технологии-->
