Делает страницу портфолио
работают переходы на страницы. Страница портфолио прошла валидатор

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <header>
       <nav>         
         <ul>
-            <li><a href="">WebStudio</a> </li>
-            <li><a href="">Студия</a></li>
-            <li><a href="">Портфолио</a></li>
-            <li><a href="">Контакты</a></li>
+            <li><a href="#">WebStudio</a> </li>
+            <li><a href="#">Студия</a></li>
+            <li><a href="portfolio.html" target="_blank">Портфолио</a></li>
+            <li><a href="#">Контакты</a></li>
         </ul>
       </nav>
        <ul>
@@ -76,22 +76,22 @@
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <a href=""><img src="./images/01.jpg" alt="Игорь Демьяненко" width="270"></a>
+            <a href="#"><img src="./images/01.jpg" alt="Игорь Демьяненко" width="270"></a>
             <h3>Игорь Демьяненко</h3>
             <p>Product designer</p>
           </li>
           <li>
-            <a href=""><img src="./images/04.jpg" alt="Ольга Репина" width="270"></a>
+            <a href="#"><img src="./images/04.jpg" alt="Ольга Репина" width="270"></a>
             <h3>Ольга Репина</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <a href=""><img src="./images/03.jpg" alt="Николай Тарасов" width="270"></a>
+            <a href="#"><img src="./images/03.jpg" alt="Николай Тарасов" width="270"></a>
             <h3>Николай Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <a href=""><img src="./images/02.jpg" alt="Михаил Ермаков" width="270"></a>
+            <a href="#"><img src="./images/02.jpg" alt="Михаил Ермаков" width="270"></a>
             <h3>Михаил Ермаков</h3>
             <p>UI Designer</p>
           </li>
@@ -100,8 +100,8 @@
     </main>
     <!--Подвал-->    
     <footer>       
-    <a href="">WebStudio</a>
-    <address><a href="">г. Киев, пр-т Леси Украинки, 26</a></address>              
+    <a href="index.html">WebStudio</a>
+    <address><a href="#">г. Киев, пр-т Леси Украинки, 26</a></address>              
          
       <ul>
         <li>
