--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
            <!--Основная надпись с кнопкой-->
       <section class="hero-type">
          <h1 class="hero-text">ЭФФЕКТИВНЫЕ РЕШЕНИЯ <br> ДЛЯ ВАШЕГО БИЗНЕСА</h1>
-          <button type="button" >Заказать услугу</button>
+          <button type="button" class="button primary">Заказать услугу</button>
       </section>
 
       <!--Скилы и технологии-->
