--- a/portfolio.html
+++ b/portfolio.html
@@ -27,11 +27,11 @@
         <h1 hidden>Наше портфолио</h1>
       <section>
        <ul class="ul-nostyle">
-           <li><button type="button">Все</button></li>
-           <li><button type="button">Веб-сайты</button></li>
-           <li><button type="button">Приложения</button></li>
-           <li><button type="button">Дизайн</button></li>
-           <li><button type="button">Маркетинг</button></li>
+           <li><button type="button" class="button primary">Все</button></li>
+           <li><button type="button" class="button secondary">Веб-сайты</button></li>
+           <li><button type="button" class="button secondary">Приложения</button></li>
+           <li><button type="button" class="button secondary">Дизайн</button></li>
+           <li><button type="button" class="button secondary">Маркетинг</button></li>
        </ul>
 
        <ul class="ul-nostyle">
