--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Портфолио</title>
+    <link
+       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet"
+      >
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -27,7 +30,7 @@
         <h1 hidden>Наше портфолио</h1>
       <section>
        <ul class="ul-nostyle">
-           <li><button type="button" class="button primary">Все</button></li>
+           <li><button type="button" class="button secondary">Все</button></li>
            <li><button type="button" class="button secondary">Веб-сайты</button></li>
            <li><button type="button" class="button secondary">Приложения</button></li>
            <li><button type="button" class="button secondary">Дизайн</button></li>
@@ -39,64 +42,64 @@
                 <a href="#">
                    <img src="./images/portfolio/img01.jpg" alt="открытый ноутбук" width="370" height="294">
                 </a>
-                <h2 class="title-text">Технокряк</h2>
-                <p>Веб-сайт</p>
+                <h2 class="title-text cards-title">Технокряк</h2>
+                <p class="cards-text">Веб-сайт</p>
             </li>
             <li>
                 <a href="#">
                     <img src="./images/portfolio/img02.jpg" alt="баскетболисты" width="370" height="294">
                 </a>
-                <h2 class="title-text">Постер New Orlean vs Golden Star</h2>
-                <p>Дизайн</p>
+                <h2 class="title-text cards-title">Постер New Orlean vs Golden Star</h2>
+                <p class="cards-text">Дизайн</p>
             </li>
             <li>
                 <a href="#">
                     <img src="./images/portfolio/img03.jpg" alt="картинка с рыбой" width="370" height="294">
                 </a>
-                <h2 class="title-text">Ресторан Seafood</h2>
-                <p>Приложение</p>
+                <h2 class="title-text cards-title">Ресторан Seafood</h2>
+                <p class="cards-text">Приложение</p>
             </li>
             <li>
                 <a href="#">
                     <img src="./images/portfolio/img04.jpg" alt="наушники" width="370" height="294">
                 </a>
-                <h2 class="title-text">Проект Prime</h2>
-                <p>Маркетинг</p>
+                <h2 class="title-text cards-title">Проект Prime</h2>
+                <p class="cards-text">Маркетинг</p>
             </li>
             <li>
                 <a href="#">
                     <img src="./images/portfolio/img05.jpg" alt="коробочки" width="370" height="294">
                 </a>
-                <h2 class="title-text">Проект Boxes</h2>
-                <p>Приложение</p>
+                <h2 class="title-text cards-title">Проект Boxes</h2>
+                <p class="cards-text">Приложение</p>
             </li>
             <li>
                 <a href="#">
                     <img src="./images/portfolio/img06.jpg" alt="монитор" width="370" height="294">
                 </a>
-                <h2 class="title-text">Inspiration has no Borders</h2>
-                <p>Веб-сайт</p>
+                <h2 class="title-text cards-title">Inspiration has no Borders</h2>
+                <p class="cards-text">Веб-сайт</p>
             </li>
             <li>
                 <a href="#">
                     <img src="./images/portfolio/img07.jpg" alt="книга" width="370" height="294">
                 </a>
-                <h2 class="title-text">Издание Limited Edition</h2>
-                <p>Дизайн</p>
+                <h2 class="title-text cards-title">Издание Limited Edition</h2>
+                <p class="cards-text">Дизайн</p>
             </li>
             <li>
                 <a href="#">
                     <img src="./images/portfolio/img08.jpg" alt="бирка" width="370" height="294">
                 </a>
-                <h2 class="title-text">Проект LAB</h2>
-                <p>Маркетинг</p>
+                <h2 class="title-text cards-title">Проект LAB</h2>
+                <p class="cards-text">Маркетинг</p>
             </li>
             <li>
                 <a href="#">
                     <img src="./images/portfolio/img09.jpg" alt="клавиатура ноутбука" width="370" height="294">
                 </a>
-                <h2 class="title-text">Growing Business</h2>
-                <p>Приложение</p>
+                <h2 class="title-text cards-title">Growing Business</h2>
+                <p class="cards-text">Приложение</p>
             </li>
                 
                   
