--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
       <title>WebStudio</title>
+      <link
+       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet"
+      >
       <link rel="stylesheet" href="./css/style.css">
   </head>
 
@@ -37,19 +40,19 @@
         <h2 hidden>Наши преимущества</h2>
         <ul class="ul-nostyle">
           <li>
-             <h3 class="title-text">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
+             <h3 class="title-text skils-title">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
              <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
           </li>
           <li>
-             <h3 class="title-text">ПУНКТУАЛЬНОСТЬ</h3>
+             <h3 class="title-text skils-title">ПУНКТУАЛЬНОСТЬ</h3>
             <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
           </li>
           <li>
-            <h3 class="title-text">ПЛАНИРОВАНИЕ</h3>
+            <h3 class="title-text skils-title">ПЛАНИРОВАНИЕ</h3>
             <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
           </li>
           <li>
-              <h3 class="title-text">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
+              <h3 class="title-text skils-title">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
               <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
           </li>
         </ul>        
@@ -57,7 +60,7 @@
             
       <!--Чем мы занимаемся-->      
       <section class="task-type">
-        <h2 class="title-text">Чем мы занимаемся</h2>
+        <h2 class="title-text task-title">Чем мы занимаемся</h2>
         <ul class="ul-nostyle">
           <li>
             <a href=""><img src="./images/img1.png" alt="img1" width="370"></a>
@@ -73,27 +76,27 @@
 
       <!--Наша команда-->
       <section class="person-type">
-        <h2 class="title-text">Наша команда</h2>
+        <h2 class="title-text person-title">Наша команда</h2>
         <ul class="ul-nostyle">
           <li>
             <a href="#"><img src="./images/01.jpg" alt="Игорь Демьяненко" width="270"></a>
-            <h3 class="title-text">Игорь Демьяненко</h3>
-            <p>Product designer</p>
+            <h3 class="title-text name-text">Игорь Демьяненко</h3>
+            <p class="person-work">Product designer</p>
           </li>
           <li>
             <a href="#"><img src="./images/04.jpg" alt="Ольга Репина" width="270"></a>
-            <h3 class="title-text">Ольга Репина</h3>
-            <p>Frontend Developer</p>
+            <h3 class="title-text name-text">Ольга Репина</h3>
+            <p class="person-work">Frontend Developer</p>
           </li>
           <li>
             <a href="#"><img src="./images/03.jpg" alt="Николай Тарасов" width="270"></a>
-            <h3 class="title-text">Николай Тарасов</h3>
-            <p>Marketing</p>
+            <h3 class="title-text name-text">Николай Тарасов</h3>
+            <p class="person-work">Marketing</p>
           </li>
           <li>
             <a href="#"><img src="./images/02.jpg" alt="Михаил Ермаков" width="270"></a>
-            <h3 class="title-text">Михаил Ермаков</h3>
-            <p>UI Designer</p>
+            <h3 class="title-text name-text">Михаил Ермаков</h3>
+            <p class="person-work">UI Designer</p>
           </li>
         </ul>
       </section>   
