--- a/portfolio.html
+++ b/portfolio.html
@@ -42,69 +42,68 @@
 
        <ul class="ul-nostyle">
            <li>
-                <a href="#">
-                   <img src="./images/portfolio/img01.jpg" alt="открытый ноутбук" width="370" height="294">
+                <a href="#" class="cards-nostyle">
+                   <img src="./images/portfolio/img01.jpg" alt="открытый ноутбук" width="370" height="294">               
+                   <h2 class="title-text cards-title">Технокряк</h2>
+                   <p class="cards-text">Веб-сайт</p>
                 </a>
-                <h2 class="title-text cards-title">Технокряк</h2>
-                <p class="cards-text">Веб-сайт</p>
             </li>
             <li>
-                <a href="#">
-                    <img src="./images/portfolio/img02.jpg" alt="баскетболисты" width="370" height="294">
-                </a>
-                <h2 class="title-text cards-title">Постер New Orlean vs Golden Star</h2>
-                <p class="cards-text">Дизайн</p>
+                <a href="#" class="cards-nostyle">
+                    <img src="./images/portfolio/img02.jpg" alt="баскетболисты" width="370" height="294">                
+                    <h2 class="title-text cards-title">Постер New Orlean vs Golden Star</h2>
+                    <p class="cards-text">Дизайн</p>
+                 </a>
             </li>
             <li>
-                <a href="#">
-                    <img src="./images/portfolio/img03.jpg" alt="картинка с рыбой" width="370" height="294">
+                <a href="#" class="cards-nostyle">
+                    <img src="./images/portfolio/img03.jpg" alt="картинка с рыбой" width="370" height="294">                
+                   <h2 class="title-text cards-title">Ресторан Seafood</h2>
+                   <p class="cards-text">Приложение</p>
                 </a>
-                <h2 class="title-text cards-title">Ресторан Seafood</h2>
-                <p class="cards-text">Приложение</p>
             </li>
             <li>
-                <a href="#">
-                    <img src="./images/portfolio/img04.jpg" alt="наушники" width="370" height="294">
+                <a href="#" class="cards-nostyle">
+                    <img src="./images/portfolio/img04.jpg" alt="наушники" width="370" height="294">                
+                    <h2 class="title-text cards-title">Проект Prime</h2>
+                    <p class="cards-text">Маркетинг</p>
                 </a>
-                <h2 class="title-text cards-title">Проект Prime</h2>
-                <p class="cards-text">Маркетинг</p>
             </li>
             <li>
-                <a href="#">
-                    <img src="./images/portfolio/img05.jpg" alt="коробочки" width="370" height="294">
+                <a href="#" class="cards-nostyle">
+                    <img src="./images/portfolio/img05.jpg" alt="коробочки" width="370" height="294">                
+                    <h2 class="title-text cards-title">Проект Boxes</h2>
+                    <p class="cards-text">Приложение</p>
                 </a>
-                <h2 class="title-text cards-title">Проект Boxes</h2>
-                <p class="cards-text">Приложение</p>
             </li>
             <li>
-                <a href="#">
-                    <img src="./images/portfolio/img06.jpg" alt="монитор" width="370" height="294">
+                <a href="#" class="cards-nostyle">
+                    <img src="./images/portfolio/img06.jpg" alt="монитор" width="370" height="294">                
+                    <h2 class="title-text cards-title">Inspiration has no Borders</h2>
+                    <p class="cards-text">Веб-сайт</p>
                 </a>
-                <h2 class="title-text cards-title">Inspiration has no Borders</h2>
-                <p class="cards-text">Веб-сайт</p>
             </li>
             <li>
-                <a href="#">
-                    <img src="./images/portfolio/img07.jpg" alt="книга" width="370" height="294">
+                <a href="#" class="cards-nostyle">
+                    <img src="./images/portfolio/img07.jpg" alt="книга" width="370" height="294">                
+                    <h2 class="title-text cards-title">Издание Limited Edition</h2>
+                    <p class="cards-text">Дизайн</p>
                 </a>
-                <h2 class="title-text cards-title">Издание Limited Edition</h2>
-                <p class="cards-text">Дизайн</p>
             </li>
             <li>
-                <a href="#">
-                    <img src="./images/portfolio/img08.jpg" alt="бирка" width="370" height="294">
+                <a href="#" class="cards-nostyle">
+                    <img src="./images/portfolio/img08.jpg" alt="бирка" width="370" height="294">                
+                    <h2 class="title-text cards-title">Проект LAB</h2>
+                    <p class="cards-text">Маркетинг</p>
                 </a>
-                <h2 class="title-text cards-title">Проект LAB</h2>
-                <p class="cards-text">Маркетинг</p>
             </li>
             <li>
-                <a href="#">
-                    <img src="./images/portfolio/img09.jpg" alt="клавиатура ноутбука" width="370" height="294">
+                <a href="#" class="cards-nostyle">
+                    <img src="./images/portfolio/img09.jpg" alt="клавиатура ноутбука" width="370" height="294">                
+                    <h2 class="title-text cards-title">Growing Business</h2>
+                    <p class="cards-text">Приложение</p>
                 </a>
-                <h2 class="title-text cards-title">Growing Business</h2>
-                <p class="cards-text">Приложение</p>
-            </li>
-                
+            </li>                
                   
        </ul>
       </section>
