--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <main>
            <!--Основная надпись с кнопкой-->
       <section class="hero-type">
-         <h1 class="hero-text">ЭФФЕКТИВНЫЕ РЕШЕНИЯ <br> ДЛЯ ВАШЕГО БИЗНЕСА</h1>
+         <h1 class="hero-text">эффективные решения<br>для вашего бизнеса</h1>
           <button type="button" class="button primary">Заказать услугу</button>
       </section>
 
@@ -42,19 +42,19 @@
         <h2 hidden>Наши преимущества</h2>
         <ul class="ul-nostyle">
           <li>
-             <h3 class="title-text skils-title">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
+             <h3 class="title-text skils-title">внимание к деталям</h3>
              <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
           </li>
           <li>
-             <h3 class="title-text skils-title">ПУНКТУАЛЬНОСТЬ</h3>
+             <h3 class="title-text skils-title">пунктуальность</h3>
             <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
           </li>
           <li>
-            <h3 class="title-text skils-title">ПЛАНИРОВАНИЕ</h3>
+            <h3 class="title-text skils-title">планирование</h3>
             <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
           </li>
           <li>
-              <h3 class="title-text skils-title">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
+              <h3 class="title-text skils-title">современные технологии</h3>
               <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
           </li>
         </ul>        
@@ -65,13 +65,13 @@
         <h2 class="title-text task-title">Чем мы занимаемся</h2>
         <ul class="ul-nostyle">
           <li>
-            <a href=""><img src="./images/img1.png" alt="img1" width="370"></a>
+              <img src="./images/img1.png" alt="img1" width="370">
           </li>
           <li>
-            <a href=""><img src="./images/img2.png" alt="img2" width="370"></a>
+              </a><img src="./images/img2.png" alt="img2" width="370">
           </li>
           <li>
-            <a href=""><img src="./images/img3.png" alt="img3" width="370"></a>
+              <img src="./images/img3.png" alt="img3" width="370">
           </li>
         </ul>
       </section>
@@ -81,22 +81,22 @@
         <h2 class="title-text person-title">Наша команда</h2>
         <ul class="ul-nostyle">
           <li>
-            <a href="#"><img src="./images/01.jpg" alt="Игорь Демьяненко" width="270"></a>
+            <img src="./images/01.jpg" alt="Игорь Демьяненко" width="270">
             <h3 class="title-text name-text">Игорь Демьяненко</h3>
             <p class="person-work">Product designer</p>
           </li>
           <li>
-            <a href="#"><img src="./images/04.jpg" alt="Ольга Репина" width="270"></a>
+            <img src="./images/04.jpg" alt="Ольга Репина" width="270">
             <h3 class="title-text name-text">Ольга Репина</h3>
             <p class="person-work">Frontend Developer</p>
           </li>
           <li>
-            <a href="#"><img src="./images/03.jpg" alt="Николай Тарасов" width="270"></a>
+            <img src="./images/03.jpg" alt="Николай Тарасов" width="270">
             <h3 class="title-text name-text">Николай Тарасов</h3>
             <p class="person-work">Marketing</p>
           </li>
           <li>
-            <a href="#"><img src="./images/02.jpg" alt="Михаил Ермаков" width="270"></a>
+            <img src="./images/02.jpg" alt="Михаил Ермаков" width="270">
             <h3 class="title-text name-text">Михаил Ермаков</h3>
             <p class="person-work">UI Designer</p>
           </li>
@@ -105,10 +105,14 @@
     </main>
     <!--Подвал-->    
     <footer class="footer-type">       
-    <a class="link-nostyle logo" href="index.html">Web<span class="footer-color">Studio</span></a>
-    <address><a class="link-nostyle footer-text" href="#">г. Киев, пр-т Леси Украинки, 26</a></address>              
+    <a class="link-nostyle logo" href="index.html">Web<span class="footer-color">Studio</span></a>          
          
       <ul class="ul-nostyle">
+        <li>
+          <address>
+            <a class="link-nostyle footer-text" href="#">г. Киев, пр-т Леси Украинки, 26</a>
+          </address>        
+        </li>
         <li>
           <a class="link-nostyle contact-text" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
