Применяет переменные к шрифту
Еще раз HTML-файлы прошли. валидатор.

--- a/portfolio.html
+++ b/portfolio.html
@@ -111,9 +111,13 @@
     <!--Подвал-->
     <footer class="footer-type">
         <a class="link-nostyle logo" href="./index.html">Web<span class="footer-color">Studio</span></a>
-        <address><a class="link-nostyle footer-text" href="#">г. Киев, пр-т Леси Украинки, 26</a></address>
-    
+            
         <ul class="ul-nostyle">
+            <li>
+                <address>
+                  <a class="link-nostyle footer-text" href="#">г. Киев, пр-т Леси Украинки, 26</a>
+                </address>   
+            </li>
             <li>
                 <a class="link-nostyle contact-text" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
