--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               <img src="./images/img1.png" alt="img1" width="370">
           </li>
           <li>
-              </a><img src="./images/img2.png" alt="img2" width="370">
+              <img src="./images/img2.png" alt="img2" width="370">
           </li>
           <li>
               <img src="./images/img3.png" alt="img3" width="370">
